Fix broken build badge image PR #257

--- a/_modules/thetis/configuration.html
+++ b/_modules/thetis/configuration.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.configuration &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
+    <title>thetis.configuration &#8212; Thetis 0+untagged.1718.gf836c9a.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -203,7 +203,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="n">obj</span><span class="p">,</span> <span class="n">value</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="FiredrakeConstantTraitlet.default_value_repr"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.FiredrakeConstantTraitlet.default_value_repr">[docs]</a>    <span class="k">def</span> <span class="nf">default_value_repr</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span></div></div>
+        <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">float</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">))</span></div></div>
 
 
 <div class="viewcode-block" id="FiredrakeCoefficient"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.FiredrakeCoefficient">[docs]</a><span class="k">class</span> <span class="nc">FiredrakeCoefficient</span><span class="p">(</span><span class="n">TraitType</span><span class="p">):</span>
@@ -217,7 +217,7 @@
 
 <div class="viewcode-block" id="FiredrakeCoefficient.default_value_repr"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.FiredrakeCoefficient.default_value_repr">[docs]</a>    <span class="k">def</span> <span class="nf">default_value_repr</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">,</span> <span class="n">Constant</span><span class="p">):</span>
-            <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
+            <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">float</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">))</span>
         <span class="k">return</span> <span class="s1">&#39;Function&#39;</span></div></div>
 
 
@@ -233,7 +233,7 @@
 
 <div class="viewcode-block" id="FiredrakeScalarExpression.default_value_repr"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.FiredrakeScalarExpression.default_value_repr">[docs]</a>    <span class="k">def</span> <span class="nf">default_value_repr</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">,</span> <span class="n">Constant</span><span class="p">):</span>
-            <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
+            <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">float</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">))</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">,</span> <span class="n">Function</span><span class="p">):</span>
             <span class="k">return</span> <span class="s1">&#39;Function&#39;</span>
         <span class="k">return</span> <span class="s1">&#39;UFL scalar expression&#39;</span></div></div>
@@ -251,7 +251,7 @@
 
 <div class="viewcode-block" id="FiredrakeVectorExpression.default_value_repr"><a class="viewcode-back" href="../../thetis.html#thetis.configuration.FiredrakeVectorExpression.default_value_repr">[docs]</a>    <span class="k">def</span> <span class="nf">default_value_repr</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">,</span> <span class="n">Constant</span><span class="p">):</span>
-            <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="o">.</span><span class="n">dat</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
+            <span class="k">return</span> <span class="s1">&#39;Constant(</span><span class="si">{:}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">float</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">))</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">default_value</span><span class="p">,</span> <span class="n">Function</span><span class="p">):</span>
             <span class="k">return</span> <span class="s1">&#39;Function&#39;</span>
         <span class="k">return</span> <span class="s1">&#39;UFL vector expression&#39;</span></div></div>
