--- a/_modules/thetis/implicitexplicit.html
+++ b/_modules/thetis/implicitexplicit.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
+    <title>thetis.implicitexplicit &#8212; Thetis 0+untagged.1720.g734247e documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -37,7 +37,6 @@
         <li class="page_item"><a href="../../funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="../../contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetis/branches" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -84,9 +83,8 @@
         <span class="sd">&quot;&quot;&quot;Explicit Runge-Kutta class&quot;&quot;&quot;</span>
         <span class="k">pass</span>
 
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-                 <span class="n">solver_parameters</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">solver_parameters_dirk</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">solver_parameters</span><span class="p">)</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">,</span> <span class="n">solver_parameters</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">IMEXGeneric</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">solver_parameters</span><span class="o">=</span><span class="n">solver_parameters</span><span class="p">)</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg equation: equation to solve</span>
 <span class="sd">        :type equation: :class:`Equation` object</span>
@@ -94,17 +92,21 @@
 <span class="sd">        :arg fields: Dictionary of fields that are passed to the equation</span>
 <span class="sd">        :type fields: dict of :class:`Function` or :class:`Constant` objects</span>
 <span class="sd">        :arg float dt: time step in seconds</span>
-<span class="sd">        :kwarg dict bnd_conditions: Dictionary of boundary conditions passed to the equation</span>
-<span class="sd">        :kwarg solver_parameters: PETSc solver options for explicit solver</span>
-<span class="sd">        :kwarg dict solver_parameters_dirk: PETSc solver options for implicit solver</span>
+<span class="sd">        :arg options: :class:`TimeStepperOptions` instance containing parameter values.</span>
+<span class="sd">        :arg dict bnd_conditions: Dictionary of boundary conditions passed to the equation</span>
+<span class="sd">        :kwarg solver_parameters: PETSc solver options</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">solver_parameters</span> <span class="o">=</span> <span class="n">options</span><span class="o">.</span><span class="n">solver_parameters</span>
+        <span class="n">solver_parameters_dirk</span> <span class="o">=</span> <span class="n">options</span><span class="o">.</span><span class="n">solver_parameters_dirk</span>
 
         <span class="c1"># implicit scheme</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dirk_class</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">,</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dirk_class</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span>
+                                    <span class="n">bnd_conditions</span><span class="o">=</span><span class="n">bnd_conditions</span><span class="p">,</span>
                                     <span class="n">solver_parameters</span><span class="o">=</span><span class="n">solver_parameters_dirk</span><span class="p">,</span>
                                     <span class="n">terms_to_add</span><span class="o">=</span><span class="p">(</span><span class="s1">&#39;implicit&#39;</span><span class="p">))</span>
         <span class="c1"># explicit scheme</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">erk</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk_class</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">,</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">erk</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk_class</span><span class="p">(</span><span class="n">equation</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">dt</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span>
+                                  <span class="n">bnd_conditions</span><span class="o">=</span><span class="n">bnd_conditions</span><span class="p">,</span>
                                   <span class="n">solver_parameters</span><span class="o">=</span><span class="n">solver_parameters</span><span class="p">,</span>
                                   <span class="n">terms_to_add</span><span class="o">=</span><span class="p">(</span><span class="s1">&#39;explicit&#39;</span><span class="p">,</span> <span class="s1">&#39;source&#39;</span><span class="p">))</span>
         <span class="k">assert</span> <span class="bp">self</span><span class="o">.</span><span class="n">erk</span><span class="o">.</span><span class="n">n_stages</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">dirk</span><span class="o">.</span><span class="n">n_stages</span>
@@ -223,7 +225,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2020, Tuomas Karna et al..
+        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
