--- a/_modules/thetis/turbulence.html
+++ b/_modules/thetis/turbulence.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.turbulence &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
+    <title>thetis.turbulence &#8212; Thetis 0+untagged.1718.gf836c9a.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -670,7 +670,7 @@
                                             <span class="n">bathymetry</span><span class="p">,</span> <span class="n">v_elem_size</span><span class="p">,</span> <span class="n">h_elem_size</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">gls_model</span> <span class="o">=</span> <span class="n">gls_model</span>
 
-<div class="viewcode-block" id="TKESourceTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.TKESourceTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="TKESourceTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.TKESourceTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="c1"># TKE: P + B - eps</span>
         <span class="c1"># P = viscosity M**2           (production)</span>
         <span class="c1"># B = - diffusivity N**2       (byoyancy production)</span>
@@ -735,7 +735,7 @@
                                             <span class="n">bathymetry</span><span class="p">,</span> <span class="n">v_elem_size</span><span class="p">,</span> <span class="n">h_elem_size</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">gls_model</span> <span class="o">=</span> <span class="n">gls_model</span>
 
-<div class="viewcode-block" id="PsiSourceTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.PsiSourceTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="PsiSourceTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.PsiSourceTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="c1"># psi: psi/k*(c1*P + c3*B - c2*eps*f_wall)</span>
         <span class="c1"># P = viscosity M**2           (production)</span>
         <span class="c1"># B = - diffusivity N**2       (byoyancy production)</span>
@@ -825,10 +825,10 @@
                                                        <span class="n">sipg_factor_vertical</span><span class="o">=</span><span class="n">sipg_factor</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">schmidt_nb</span> <span class="o">=</span> <span class="n">schmidt_nb</span>
 
-<div class="viewcode-block" id="GLSVerticalDiffusionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.GLSVerticalDiffusionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="GLSVerticalDiffusionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.turbulence.GLSVerticalDiffusionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">d</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;diffusivity_v&#39;</span><span class="p">:</span> <span class="n">fields_old</span><span class="p">[</span><span class="s1">&#39;viscosity_v&#39;</span><span class="p">]</span><span class="o">/</span><span class="bp">self</span><span class="o">.</span><span class="n">schmidt_nb</span><span class="p">}</span>
         <span class="n">f</span> <span class="o">=</span> <span class="nb">super</span><span class="p">(</span><span class="n">GLSVerticalDiffusionTerm</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">residual</span><span class="p">(</span><span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span>
-                                                           <span class="n">d</span><span class="p">,</span> <span class="n">d</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
+                                                           <span class="n">d</span><span class="p">,</span> <span class="n">d</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">f</span></div></div>
 
 
