--- a/field_list.html
+++ b/field_list.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>&lt;no title&gt; &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
+    <title>&lt;no title&gt; &#8212; Thetis 0+untagged.1720.g734247e documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -37,7 +37,6 @@
         <li class="page_item"><a href="funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetis/branches" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -63,6 +62,27 @@
 <blockquote>
 <div><ul class="simple">
 <li><p>output file: bathymetry2d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>bathymetry_3d</strong>: Bathymetry [m]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: bathymetry3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>bottom_drag_2d</strong>: Bottom drag coefficient [-]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: BottomDrag2d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>bottom_drag_3d</strong>: Bottom drag coefficient [-]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: BottomDrag3d.pvd</p></li>
 </ul>
 </div></blockquote>
 </li>
@@ -115,6 +135,13 @@
 </ul>
 </div></blockquote>
 </li>
+<li><p><strong>elev_3d</strong>: Water elevation [m]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: Elevation3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
 <li><p><strong>elev_cg_2d</strong>: Water elevation CG [m]</p>
 <blockquote>
 <div><ul class="simple">
@@ -122,14 +149,14 @@
 </ul>
 </div></blockquote>
 </li>
-<li><p><strong>elev_domain_2d</strong>: Surface elevation of domain [m]</p>
+<li><p><strong>elev_cg_3d</strong>: Water elevation CG [m]</p>
 <blockquote>
 <div><ul class="simple">
-<li><p>output file: ElevationDomain2d.pvd</p></li>
+<li><p>output file: ElevationCG3d.pvd</p></li>
 </ul>
 </div></blockquote>
 </li>
-<li><p><strong>eps_3d</strong>: TKE dissipation rate [m2 s-3]</p>
+<li><p><strong>eps_3d</strong>: TKE dissipation rate [m2 s-2]</p>
 <blockquote>
 <div><ul class="simple">
 <li><p>output file: TurbEps3d.pvd</p></li>
@@ -178,6 +205,13 @@
 </ul>
 </div></blockquote>
 </li>
+<li><p><strong>parab_visc_3d</strong>: Parabolic Viscosity [m2 s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: ParabVisc3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
 <li><p><strong>psi_3d</strong>: Turbulence psi variable [-]</p>
 <blockquote>
 <div><ul class="simple">
@@ -189,13 +223,6 @@
 <blockquote>
 <div><ul class="simple">
 <li><p>output file: Salinity3d.pvd</p></li>
-</ul>
-</div></blockquote>
-</li>
-<li><p><strong>sediment_2d</strong>: Sediment [-]</p>
-<blockquote>
-<div><ul class="simple">
-<li><p>output file: Sediment2d.pvd</p></li>
 </ul>
 </div></blockquote>
 </li>
@@ -255,6 +282,20 @@
 </ul>
 </div></blockquote>
 </li>
+<li><p><strong>uv_bottom_2d</strong>: Bottom velocity [m s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: BottomVelo2d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>uv_bottom_3d</strong>: Bottom velocity [m s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: BottomVelo3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
 <li><p><strong>uv_dav_2d</strong>: Depth averaged velocity [m s-1]</p>
 <blockquote>
 <div><ul class="simple">
@@ -266,6 +307,20 @@
 <blockquote>
 <div><ul class="simple">
 <li><p>output file: DAVelocity3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>uv_mag_3d</strong>: Magnitude of horizontal velocity [m s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: VeloMag3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>uv_p1_3d</strong>: P1 projection of horizontal velocity [m s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: VeloCG3d.pvd</p></li>
 </ul>
 </div></blockquote>
 </li>
@@ -297,10 +352,31 @@
 </ul>
 </div></blockquote>
 </li>
+<li><p><strong>w_mesh_surf_2d</strong>: Surface mesh velocity [m s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: SurfMeshVelo3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>w_mesh_surf_3d</strong>: Surface mesh velocity [m s-1]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: SurfMeshVelo3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
 <li><p><strong>wind_stress_3d</strong>: Wind stress [Pa]</p>
 <blockquote>
 <div><ul class="simple">
 <li><p>output file: wind_stress_3d.pvd</p></li>
+</ul>
+</div></blockquote>
+</li>
+<li><p><strong>z_bottom_2d</strong>: Bottom cell z coordinates [m]</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>output file: ZBottom2d.pvd</p></li>
 </ul>
 </div></blockquote>
 </li>
@@ -329,7 +405,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2020, Tuomas Karna et al..
+        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
