--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1689.ge390b9e documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1720.g734247e documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -37,7 +37,6 @@
         <li class="page_item"><a href="funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetis/branches" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -149,8 +148,12 @@
         <li><a href="thetis.html#thetis.shallowwater_eq.ModeSplit2DEquations.add_momentum_terms">(thetis.shallowwater_eq.ModeSplit2DEquations method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.add_new_field">add_new_field() (thetis.solver2d.FlowSolver2d method)</a>
+      <li><a href="thetis.html#thetis.solver.FlowSolver.add_new_field">add_new_field() (thetis.solver.FlowSolver method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.add_new_field">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
+      </ul></li>
       <li><a href="thetis.html#thetis.equation.Equation.add_term">add_term() (thetis.equation.Equation method)</a>
 </li>
       <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeTracerEquation2D.add_terms">add_terms() (thetis.conservative_tracer_eq_2d.ConservativeTracerEquation2D method)</a>
@@ -553,10 +556,10 @@
         <li><a href="thetis.html#thetis.timeintegrator.SteadyState.cfl_coeff">(thetis.timeintegrator.SteadyState attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.rungekutta.AbstractRKScheme.cfl_coeff">cfl_coeff() (thetis.rungekutta.AbstractRKScheme property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_conservation">check_salinity_conservation (thetis.options.ModelOptions3d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_overshoot">check_salinity_overshoot (thetis.options.ModelOptions3d attribute)</a>
@@ -632,7 +635,11 @@
       <li><a href="thetis.html#thetis.stability_functions.StabilityFunctionBase.compute_length_clim">compute_length_clim() (thetis.stability_functions.StabilityFunctionBase method)</a>
 </li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.compute_mesh_stats">compute_mesh_stats() (thetis.solver.FlowSolver method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.compute_mesh_stats">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
+      </ul></li>
       <li><a href="thetis.html#thetis.coupled_timeintegrator.CoupledTwoStageRK.compute_mesh_velocity">compute_mesh_velocity() (thetis.coupled_timeintegrator.CoupledTwoStageRK method)</a>
 </li>
       <li><a href="thetis.html#thetis.utility3d.ALEMeshUpdater.compute_mesh_velocity_begin">compute_mesh_velocity_begin() (thetis.utility3d.ALEMeshUpdater method)</a>
@@ -749,8 +756,12 @@
         <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_equations">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_exporters">create_exporters() (thetis.solver2d.FlowSolver2d method)</a>
+      <li><a href="thetis.html#thetis.solver.FlowSolver.create_exporters">create_exporters() (thetis.solver.FlowSolver method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_exporters">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
+      </ul></li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.create_fields">create_fields() (thetis.solver.FlowSolver method)</a>
 </li>
       <li><a href="thetis.html#thetis.solver.FlowSolver.create_function_spaces">create_function_spaces() (thetis.solver.FlowSolver method)</a>
@@ -759,8 +770,12 @@
         <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_function_spaces">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_timestepper">create_timestepper() (thetis.solver2d.FlowSolver2d method)</a>
+      <li><a href="thetis.html#thetis.solver.FlowSolver.create_timestepper">create_timestepper() (thetis.solver.FlowSolver method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.create_timestepper">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
+      </ul></li>
       <li><a href="thetis.html#thetis.log.critical">critical() (in module thetis.log)</a>
 </li>
   </ul></td>
@@ -818,6 +833,8 @@
       <li><a href="thetis.html#thetis.options.TidalTurbineOptions.diameter">diameter (thetis.options.TidalTurbineOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.GLSModelOptions.diff_min">diff_min (thetis.options.GLSModelOptions attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.TracerFieldOptions.diffusivity">diffusivity (thetis.options.TracerFieldOptions attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1321,6 +1338,8 @@
 </li>
       <li><a href="thetis.html#thetis.implicitexplicit.IMEXMidpoint">IMEXMidpoint (class in thetis.implicitexplicit)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.IMEXTimestepperOptions2d">IMEXTimestepperOptions2d (class in thetis.options)</a>
+</li>
       <li><a href="thetis.html#thetis.rungekutta.ImplicitMidpoint">ImplicitMidpoint (class in thetis.rungekutta)</a>
 </li>
       <li><a href="thetis.html#thetis.rungekutta.ImplicitMidpointAbstract">ImplicitMidpointAbstract (class in thetis.rungekutta)</a>
@@ -1381,6 +1400,8 @@
         <li><a href="thetis.html#thetis.rungekutta.ERKGeneric.initialize">(thetis.rungekutta.ERKGeneric method)</a>
 </li>
         <li><a href="thetis.html#thetis.rungekutta.ERKGenericShuOsher.initialize">(thetis.rungekutta.ERKGenericShuOsher method)</a>
+</li>
+        <li><a href="thetis.html#thetis.solver.FlowSolver.initialize">(thetis.solver.FlowSolver method)</a>
 </li>
         <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.initialize">(thetis.solver2d.FlowSolver2d method)</a>
 </li>
@@ -1650,6 +1671,8 @@
 </li>
         <li><a href="thetis.html#thetis.callback.TimeSeriesCallback3D.message_str">(thetis.callback.TimeSeriesCallback3D method)</a>
 </li>
+        <li><a href="thetis.html#thetis.callback.TransectCallback.message_str">(thetis.callback.TransectCallback method)</a>
+</li>
         <li><a href="thetis.html#thetis.callback.VerticalProfileCallback.message_str">(thetis.callback.VerticalProfileCallback method)</a>
 </li>
         <li><a href="thetis.html#thetis.optimisation.FunctionalOptimisationCallback.message_str">(thetis.optimisation.FunctionalOptimisationCallback method)</a>
@@ -1659,6 +1682,8 @@
         <li><a href="thetis.html#thetis.turbines.TurbineOptimisationCallback.message_str">(thetis.turbines.TurbineOptimisationCallback method)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.options.TracerFieldOptions.metadata">metadata (thetis.options.TracerFieldOptions attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.callback.MinMaxConservationCallback">MinMaxConservationCallback (class in thetis.callback)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d">ModelOptions2d (class in thetis.options)</a>
@@ -1781,6 +1806,8 @@
 </li>
         <li><a href="thetis.html#thetis.callback.TracerOvershootCallBack.name">(thetis.callback.TracerOvershootCallBack attribute)</a>
 </li>
+        <li><a href="thetis.html#thetis.callback.TransectCallback.name">(thetis.callback.TransectCallback attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.callback.VerticalProfileCallback.name">(thetis.callback.VerticalProfileCallback attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.callback.VolumeConservation2DCallback.name">(thetis.callback.VolumeConservation2DCallback attribute)</a>
@@ -1808,6 +1835,8 @@
         <li><a href="thetis.html#thetis.options.TidalTurbineFarmOptions.name">(thetis.options.TidalTurbineFarmOptions attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.options.TimeStepperOptions.name">(thetis.options.TimeStepperOptions attribute)</a>
+</li>
+        <li><a href="thetis.html#thetis.options.TracerFieldOptions.name">(thetis.options.TracerFieldOptions attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.options.TurbulenceModelOptions.name">(thetis.options.TurbulenceModelOptions attribute)</a>
 </li>
@@ -2305,6 +2334,8 @@
       <li><a href="thetis.html#thetis.options.ExplicitTimestepperOptions2d.solver_parameters">solver_parameters (thetis.options.ExplicitTimestepperOptions2d attribute)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.options.IMEXTimestepperOptions2d.solver_parameters">(thetis.options.IMEXTimestepperOptions2d attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.options.NonhydrostaticModelOptions.solver_parameters">(thetis.options.NonhydrostaticModelOptions attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.options.SemiImplicitTimestepperOptions2d.solver_parameters">(thetis.options.SemiImplicitTimestepperOptions2d attribute)</a>
@@ -2313,6 +2344,8 @@
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.options.ExplicitTimestepperOptions3d.solver_parameters_2d_swe">solver_parameters_2d_swe (thetis.options.ExplicitTimestepperOptions3d attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.IMEXTimestepperOptions2d.solver_parameters_dirk">solver_parameters_dirk (thetis.options.IMEXTimestepperOptions2d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.SemiImplicitTimestepperOptions2d.solver_parameters_exner">solver_parameters_exner (thetis.options.SemiImplicitTimestepperOptions2d attribute)</a>
 </li>
@@ -2337,6 +2370,8 @@
       <li><a href="thetis.html#thetis.options.ExplicitTimestepperOptions3d.solver_parameters_tracer_explicit">solver_parameters_tracer_explicit (thetis.options.ExplicitTimestepperOptions3d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ExplicitTimestepperOptions3d.solver_parameters_tracer_implicit">solver_parameters_tracer_implicit (thetis.options.ExplicitTimestepperOptions3d attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.TracerFieldOptions.source">source (thetis.options.TracerFieldOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.momentum_eq.SourceTerm">SourceTerm (class in thetis.momentum_eq)</a>
 
@@ -2794,6 +2829,8 @@
 </li>
       <li><a href="thetis.html#thetis.tracer_eq_2d.TracerEquation2D">TracerEquation2D (class in thetis.tracer_eq_2d)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.TracerFieldOptions">TracerFieldOptions (class in thetis.options)</a>
+</li>
       <li><a href="thetis.html#thetis.callback.TracerMassConservation2DCallback">TracerMassConservation2DCallback (class in thetis.callback)</a>
 </li>
       <li><a href="thetis.html#thetis.callback.TracerMassConservationCallback">TracerMassConservationCallback (class in thetis.callback)</a>
@@ -2806,6 +2843,8 @@
         <li><a href="thetis.html#thetis.tracer_eq_2d.TracerTerm">(class in thetis.tracer_eq_2d)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.callback.TransectCallback">TransectCallback (class in thetis.callback)</a>
+</li>
       <li><a href="thetis.html#thetis.options.TidalTurbineFarmOptions.turbine_density">turbine_density (thetis.options.TidalTurbineFarmOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.TidalTurbineFarmOptions.turbine_options">turbine_options (thetis.options.TidalTurbineFarmOptions attribute)</a>
@@ -2991,6 +3030,8 @@
 </li>
         <li><a href="thetis.html#thetis.callback.TimeSeriesCallback3D.variable_names">(thetis.callback.TimeSeriesCallback3D attribute)</a>
 </li>
+        <li><a href="thetis.html#thetis.callback.TransectCallback.variable_names">(thetis.callback.TransectCallback attribute)</a>
+</li>
         <li><a href="thetis.html#thetis.callback.VerticalProfileCallback.variable_names">(thetis.callback.VerticalProfileCallback attribute)</a>
 </li>
         <li><a href="thetis.html#thetis.optimisation.FunctionalOptimisationCallback.variable_names">(thetis.optimisation.FunctionalOptimisationCallback attribute)</a>
@@ -3091,7 +3132,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2020, Tuomas Karna et al..
+        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
