--- a/turbulence_options.html
+++ b/turbulence_options.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turbulence model options &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
+    <title>Turbulence model options &#8212; Thetis 0+untagged.1720.g734247e documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -37,7 +37,6 @@
         <li class="page_item"><a href="funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="contact.html" title="Getting in touch">Contact</a></li>
         <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://jenkins.ese.ic.ac.uk:1080/blue/organizations/jenkins/thetis/branches" title="Thetis build status">Jenkins</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
@@ -74,7 +73,7 @@
 <p>Default:</p>
 <p>1.0</p>
 </dd>
-<dt>GLSModelOptions.<strong>closure_name</strong><span class="classifier">‘k-epsilon’|’k-omega’|’Generic Length Scale’</span></dt><dd><p>Name of two-equation closure</p>
+<dt>GLSModelOptions.<strong>closure_name</strong><span class="classifier">‘k-epsilon’|’k-omega’|’Generic Lenght Scale’</span></dt><dd><p>Name of two-equation closure</p>
 <p>Default:</p>
 <p>‘k-epsilon’</p>
 </dd>
@@ -91,23 +90,15 @@
 <p>Default:</p>
 <p>True</p>
 </dd>
-<dt>GLSModelOptions.<strong>compute_galperin_clim</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute c_lim length scale limiting factor</p>
+<dt>GLSModelOptions.<strong>compute_kappa</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute von Karman constant from <code class="xref py py-attr docutils literal notranslate"><span class="pre">schmidt_nb_psi</span></code></p>
 <p>Default:</p>
 <p>True</p>
 </dd>
-<dt>GLSModelOptions.<strong>compute_kappa</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute von Karman constant from <code class="xref py py-attr docutils literal notranslate"><span class="pre">schmidt_nb_psi</span></code></p>
-<p>Default:</p>
-<p>False</p>
-</dd>
 <dt>GLSModelOptions.<strong>compute_len_min</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute min_len from k_min and psi_min</p>
 <p>Default:</p>
-<p>False</p>
+<p>True</p>
 </dd>
 <dt>GLSModelOptions.<strong>compute_psi_min</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute psi_len from k_min and eps_min</p>
-<p>Default:</p>
-<p>False</p>
-</dd>
-<dt>GLSModelOptions.<strong>compute_schmidt_nb_psi</strong><span class="classifier">Bool</span></dt><dd><p>bool: compute psi Schmidt number</p>
 <p>Default:</p>
 <p>True</p>
 </dd>
@@ -117,34 +108,34 @@
 </dd>
 <dt>GLSModelOptions.<strong>eps_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for epsilon</p>
 <p>Default:</p>
-<p>1e-14</p>
+<p>1e-10</p>
 </dd>
 <dt>GLSModelOptions.<strong>f_wall</strong><span class="classifier">Float</span></dt><dd><p>float: wall function parameter</p>
 <p>Default:</p>
 <p>1.0</p>
 </dd>
-<dt>GLSModelOptions.<strong>galperin_clim</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: Galperin length scale limitation parameter</p>
+<dt>GLSModelOptions.<strong>galperin_lim</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: Galperin lenght scale limitation parameter</p>
 <p>Default:</p>
-<p>0.3</p>
+<p>0.56</p>
 </dd>
 <dt>GLSModelOptions.<strong>k_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for turbulent kinetic energy</p>
 <p>Default:</p>
-<p>1e-06</p>
+<p>3.7e-08</p>
 </dd>
 <dt>GLSModelOptions.<strong>kappa</strong><span class="classifier">Float</span></dt><dd><p>float: von Karman constant</p>
 <p>If <code class="xref py py-attr docutils literal notranslate"><span class="pre">compute_kappa</span></code> is True this value will be overriden</p>
 <p>Default:</p>
 <p>0.4</p>
 </dd>
-<dt>GLSModelOptions.<strong>len_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for turbulent length scale</p>
+<dt>GLSModelOptions.<strong>len_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for turbulent lenght scale</p>
 <p>Default:</p>
-<p>1e-12</p>
+<p>1e-10</p>
 </dd>
-<dt>GLSModelOptions.<strong>limit_eps</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin length scale limit on epsilon</p>
+<dt>GLSModelOptions.<strong>limit_eps</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin lenght scale limit on epsilon</p>
 <p>Default:</p>
 <p>False</p>
 </dd>
-<dt>GLSModelOptions.<strong>limit_len</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin length scale limit</p>
+<dt>GLSModelOptions.<strong>limit_len</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin lenght scale limit</p>
 <p>Default:</p>
 <p>False</p>
 </dd>
@@ -152,9 +143,9 @@
 <p>Default:</p>
 <p>True</p>
 </dd>
-<dt>GLSModelOptions.<strong>limit_psi</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin length scale limit on psi</p>
+<dt>GLSModelOptions.<strong>limit_psi</strong><span class="classifier">Bool</span></dt><dd><p>bool: apply Galperin lenght scale limit on psi</p>
 <p>Default:</p>
-<p>True</p>
+<p>False</p>
 </dd>
 <dt>GLSModelOptions.<strong>m</strong><span class="classifier">Float</span></dt><dd><p>float: parameter m for the definition of psi</p>
 <p>Default:</p>
@@ -170,7 +161,7 @@
 </dd>
 <dt>GLSModelOptions.<strong>psi_min</strong><span class="classifier">PositiveFloat</span></dt><dd><p>float: minimum value for psi</p>
 <p>Default:</p>
-<p>1e-14</p>
+<p>1e-10</p>
 </dd>
 <dt>GLSModelOptions.<strong>ri_st</strong><span class="classifier">Float</span></dt><dd><p>steady state gradient Richardson number</p>
 <p>Default:</p>
@@ -205,7 +196,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016-2020, Tuomas Karna et al..
+        &#169; Copyright 2016-2021, Tuomas Kärnä et al..
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
