--- a/_modules/thetis/limiter.html
+++ b/_modules/thetis/limiter.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.limiter &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>thetis.limiter &#8212; Thetis 0+untagged.1718.gf836c9a.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -201,8 +200,8 @@
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_2d</span><span class="p">:</span>
             <span class="c1"># Add nodal values from surface/bottom boundaries</span>
             <span class="c1"># NOTE calling firedrake par_loop with measure=ds_t raises an error</span>
-            <span class="n">bottom_nodes</span> <span class="o">=</span> <span class="n">get_facet_mask</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1CG</span><span class="p">,</span> <span class="s1">&#39;geometric&#39;</span><span class="p">,</span> <span class="s1">&#39;bottom&#39;</span><span class="p">)</span>
-            <span class="n">top_nodes</span> <span class="o">=</span> <span class="n">get_facet_mask</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1CG</span><span class="p">,</span> <span class="s1">&#39;geometric&#39;</span><span class="p">,</span> <span class="s1">&#39;top&#39;</span><span class="p">)</span>
+            <span class="n">bottom_nodes</span> <span class="o">=</span> <span class="n">get_facet_mask</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1CG</span><span class="p">,</span> <span class="s1">&#39;bottom&#39;</span><span class="p">)</span>
+            <span class="n">top_nodes</span> <span class="o">=</span> <span class="n">get_facet_mask</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">P1CG</span><span class="p">,</span> <span class="s1">&#39;top&#39;</span><span class="p">)</span>
             <span class="n">bottom_idx</span> <span class="o">=</span> <span class="n">op2</span><span class="o">.</span><span class="n">Global</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">bottom_nodes</span><span class="p">),</span> <span class="n">bottom_nodes</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;node_idx&#39;</span><span class="p">)</span>
             <span class="n">top_idx</span> <span class="o">=</span> <span class="n">op2</span><span class="o">.</span><span class="n">Global</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">top_nodes</span><span class="p">),</span> <span class="n">top_nodes</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;node_idx&#39;</span><span class="p">)</span>
             <span class="n">code</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
@@ -261,7 +260,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
 </html>
