--- a/_modules/thetis/sediment_eq_2d.html
+++ b/_modules/thetis/sediment_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
+    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1718.gf836c9a.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -140,7 +140,7 @@
 <div class="viewcode-block" id="SedimentErosionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentErosionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Erosion term for sediment equation&quot;&quot;&quot;</span>
-<div class="viewcode-block" id="SedimentErosionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentErosionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentErosionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">ero</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_erosion_term</span><span class="p">()</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">conservative</span><span class="p">:</span>
             <span class="n">elev</span> <span class="o">=</span> <span class="n">fields</span><span class="p">[</span><span class="s1">&#39;elev_2d&#39;</span><span class="p">]</span>
@@ -152,7 +152,7 @@
 <div class="viewcode-block" id="SedimentDepositionTerm"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm">[docs]</a><span class="k">class</span> <span class="nc">SedimentDepositionTerm</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Deposition term for sediment equation&quot;&quot;&quot;</span>
-<div class="viewcode-block" id="SedimentDepositionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="SedimentDepositionTerm.residual"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentDepositionTerm.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="n">depo</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span><span class="o">.</span><span class="n">get_deposition_coefficient</span><span class="p">()</span>
         <span class="n">elev</span> <span class="o">=</span> <span class="n">fields</span><span class="p">[</span><span class="s1">&#39;elev_2d&#39;</span><span class="p">]</span>
         <span class="n">H</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">depth</span><span class="o">.</span><span class="n">get_total_depth</span><span class="p">(</span><span class="n">elev</span><span class="p">)</span>
