--- a/_modules/thetis/turbines.html
+++ b/_modules/thetis/turbines.html
@@ -5,14 +5,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.turbines &#8212; Thetis 0+untagged.1636.g63e82af documentation</title>
+    <title>thetis.turbines &#8212; Thetis 0+untagged.1718.gf836c9a.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/jquery.js"></script>
     <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
 <!--[if lte IE 6]>
@@ -60,7 +59,6 @@
 <span class="kn">from</span> <span class="nn">.log</span> <span class="kn">import</span> <span class="o">*</span>
 <span class="kn">from</span> <span class="nn">.callback</span> <span class="kn">import</span> <span class="n">DiagnosticCallback</span>
 <span class="kn">from</span> <span class="nn">.optimisation</span> <span class="kn">import</span> <span class="n">DiagnosticOptimisationCallback</span>
-<span class="kn">import</span> <span class="nn">numpy</span>
 
 
 <div class="viewcode-block" id="TurbineFarm"><a class="viewcode-back" href="../../thetis.html#thetis.turbines.TurbineFarm">[docs]</a><span class="k">class</span> <span class="nc">TurbineFarm</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
@@ -145,7 +143,7 @@
             <span class="n">print_output</span><span class="p">(</span><span class="s1">&#39;Number of turbines = </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cost</span><span class="p">))</span>
 
     <span class="k">def</span> <span class="fm">__call__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="k">return</span> <span class="n">numpy</span><span class="o">.</span><span class="n">transpose</span><span class="p">([</span><span class="n">farm</span><span class="o">.</span><span class="n">evaluate_timestep</span><span class="p">()</span> <span class="k">for</span> <span class="n">farm</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">farms</span><span class="p">])</span>
+        <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">transpose</span><span class="p">([</span><span class="n">farm</span><span class="o">.</span><span class="n">evaluate_timestep</span><span class="p">()</span> <span class="k">for</span> <span class="n">farm</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">farms</span><span class="p">])</span>
 
 <div class="viewcode-block" id="TurbineFunctionalCallback.message_str"><a class="viewcode-back" href="../../thetis.html#thetis.turbines.TurbineFunctionalCallback.message_str">[docs]</a>    <span class="k">def</span> <span class="nf">message_str</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">current_power</span><span class="p">,</span> <span class="n">average_power</span><span class="p">,</span> <span class="n">average_profit</span><span class="p">):</span>
         <span class="k">return</span> <span class="s1">&#39;Current power, average power and profit for each farm: </span><span class="si">{}</span><span class="s1">, </span><span class="si">{}</span><span class="s1">, </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">current_power</span><span class="p">,</span> <span class="n">average_power</span><span class="p">,</span> <span class="n">average_profit</span><span class="p">)</span></div>
@@ -201,7 +199,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
 </html>
